# ZomatoAIRecommendedTop5Restaurants

./: .env.example  README.md  render.yaml  requirements.txt  streamlit_app.py  test_llm_filtering.py
backend/: .env.example  pyproject.toml  sample_test.py
backend/docs/: architecture.md  dataset-contract.md  edge-cases.md  phase0-scope.md  problemstatement.md  system_flow.md
backend/src/milestone0/: __init__.py
backend/src/milestone0/app/: __init__.py  config.py  main.py
backend/src/milestone1/: __init__.py
backend/src/milestone1/ingestion/: __init__.py  cli.py  loader.py  models.py  normalization.py
backend/src/milestone2/: __init__.py
backend/src/milestone2/preferences/: __init__.py  cli.py  models.py  validation.py
backend/src/milestone3/: __init__.py
backend/src/milestone3/retrieval/: __init__.py  filters.py  models.py
backend/src/milestone4/recommendation/: cli.py  client.py  engine.py  models.py  prompt.py
backend/src/milestone5/presentation/: api.py
backend/src/milestone6/observability/: cache.py  middleware.py
backend/src/nextleap_practice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/integration/: test_end_to_end.py
backend/tests/milestone0/app/: test_health.py
backend/tests/milestone1/ingestion/: test_hf_integration.py  test_loader.py  test_normalization.py
backend/tests/milestone2/preferences/: test_preferences.py
backend/tests/milestone3/retrieval/: test_filters.py
backend/tests/milestone4/: test_engine.py
next-frontend/: .env.local.example  package-lock.json  package.json
(+15 files in other folders)
