[project]
name = "nextleap-practice"
version = "0.1.0"
description = "AI-powered restaurant recommendation system scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2",
  "pydantic-settings",
  "python-dotenv",
  "datasets",
  "google-genai",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "httpx",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration: tests that hit external services",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
